--- a/Analyse_Exploratoire_des_Ventes_de_Supermarché.ipynb
+++ b/Analyse_Exploratoire_des_Ventes_de_Supermarché.ipynb
@@ -87,7 +87,7 @@
     }
    ],
    "source": [
-    "data = \"C:\\Users\\ANIS\\Desktop\\Sales_Data\\\""
+    "data = \"Sales_Data.csv""
    ]
   },
   {
